server-a/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-a
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  selector:
    app: server-a
