server-a/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: server-a
spec:
  rules:
    - host: server-a.liorco300.site
      http:
        paths:
          - backend:
              serviceName: server-a
              servicePort: 80
            path: /
